--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,7 +11,7 @@ function issue_badge(url)
 <% @assertions.each do |assertion| %>
 	<li>
 		<%= assertion.badge.name %> | <%= assertion.user.email %> |
-		<a href="#" onClick="issue_badge('<%=assertion.baking_callback_url%>')">Issue</a>
+		<a href="#" onClick="issue_badge('<%=baking_url assertion%>')">Issue</a>
 	</li>
 <% end %>
 </ul>
