Let's send gmail emails

--- a/app/views/badge_mailer/badge_email.html.erb
+++ b/app/views/badge_mailer/badge_email.html.erb
@@ -16,7 +16,7 @@
       Congratulations on finishing the <%= @title %> course!
     </p>
     <p>
-      You can redeem your badge and add it to your OpenBadge by clicking <a href="#" onClick="issue_badge('<%=baking_url @assertion%>')">here</a>.
+      You can redeem your badge and add it to your OpenBadge backpack by clicking <a href="#" onClick="issue_badge('<%=baking_url @assertion%>')">here</a>.
     </p>
     <p>
       You can get the raw json file <%= link_to("here", baking_url(@assertion)) %>, if you like that kind of stuff.
