Better html for the email

--- a/app/views/badge_mailer/badge_email.html.erb
+++ b/app/views/badge_mailer/badge_email.html.erb
@@ -2,25 +2,24 @@
 <html>
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
-    <script type="text/javascript" src="http://beta.openbadges.org/issuer.js"></script>
-    <script type="text/javascript">
-      function issue_badge(url)
-      {
-        OpenBadges.issue([url], function(errors, successes) {});
-      }
-    </script>
   </head>
   <body>
     <h1>Yeeeah!</h1>
+
+    <img src="<%= @assertion.badge.image %>">
+
     <p>
-      Congratulations on finishing the <%= @title %> course!
+      Congratulations on finishing the "<%= @title %>" course!
     </p>
+
     <p>
-      You can redeem your badge and add it to your OpenBadge by clicking <a href="#" onClick="issue_badge('<%=baking_url @assertion%>')">here</a>.
+      You can redeem your badge and add it to your OpenBadges backpack by clicking <%= link_to "here", baking_url(@assertion, 'html') %>.
     </p>
     <p>
       You can get the raw json file <%= link_to("here", baking_url(@assertion)) %>, if you like that kind of stuff.
     </p>
-    <p><strong>Thanks for participating in the course and hope to see you again!</strong></p>
+    <p><strong>Thanks for taking part in this course and hope to see you again!</strong></p>
+
+    More at <%= link_to "http://matehackers.org", "http://matehackers.org" %>.
   </body>
 </html>
